[go-programming-projects] Update Makefile to be consistent and integrated Makefile and updated swagger conventions into go-fiber-crm-basic
