# go-fiber-crm-basic/internal/app/route/route.go
@@ -6,7 +6,7 @@ import (
 )
 
 func SetupRoutes(app *fiber.App) {
-	app.Get("/api/v1/lead", model.GetLeads)
+	app.Get("/api/v1/leads", model.GetLeads)
 	app.Get("/api/v1/lead/:id", model.GetLead)
 	app.Post("/api/v1/lead", model.NewLead)
 	app.Delete("/api/v1/lead/:id", model.DeleteLead)
