# go-fiber-crm-basic/swagger/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "paths": {
-    "/leads": {
+    "/lead": {
       "get": {
         "tags": [
           "leads"
@@ -31,7 +31,7 @@
         }
       }
     },
-    "/leads/{id}": {
+    "/lead/{id}": {
       "get": {
         "tags": [
           "leads"
@@ -110,7 +110,7 @@
         "code": {
           "type": "string"
         },
-        "email": {
+        "details": {
           "type": "string"
         },
         "message": {
